# batch-url-validator

./: .gitignore  Makefile  README.md  pyproject.toml
src/: batch_url_validator.py
tests/: test_batch_url_validator.py
